--- a/package.json
+++ b/package.json
@@ -1,70 +1,66 @@
 {
-  "name": "react-native-dimensions-hooks",
-  "version": "0.1.2",
-  "description": "Hooks to wrap the React Native Dimensions API for React Native and React Native Web",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rjerue/react-native-dimensions-hooks.git"
-  },
-  "keywords": [
-    "react",
-    "react-native",
-    "react-native-web",
-    "hooks",
-    "hook",
-    "dimensions",
-    "dimension"
-  ],
-  "author": "Ryan Jerue",
+  "version": "0.1.0",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rjerue/react-native-dimensions-hooks/issues"
-  },
-  "homepage": "https://rjerue.github.io/react-native-dimensions-hooks",
-  "peerDependencies": {
-    "react": "^16.7.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@storybook/react": "^5.0.0",
-    "@storybook/storybook-deployer": "^2.8.1",
-    "babel-loader": "^8.0.5",
-    "metro-react-native-babel-preset": "^0.53.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-markdown": "^4.0.6",
-    "react-native-web": "^0.11.0",
-    "react-scripts": "2.1.5",
-    "rollup": "^1.4.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-replace": "^2.1.0"
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "prepublishOnly": "npm run release",
-    "release": "yarn build:dev && yarn build:prod && yarn deploy-storybook",
-    "build:prod": "NODE_ENV=production rollup -c",
-    "build:dev": "NODE_ENV=development rollup -c",
-    "deploy-storybook": "storybook-to-ghpages"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -o docs"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "peerDependencies": {
+    "react": ">=16"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "private": false
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint && yarn build && git add dist && yarn build-storybook && git add docs"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "react-native-dimensions-hooks",
+  "author": "Ryan Jerue",
+  "module": "dist/react-native-dimensions-hooks.esm.js",
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-info": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^5.3.19",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.62.13",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-react-native-web": "^0.12.3",
+    "fork-ts-checker-webpack-plugin": "^4.1.6",
+    "husky": "^4.2.5",
+    "react": "^16.13.1",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-native-web": "^0.12.3",
+    "ts-loader": "^7.0.5",
+    "tsdx": "^0.13.2",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.5"
+  }
 }
